src/tests/snapshots/cargo_vet__tests__wildcard__wildcard_full_audit_wrong_user_id_locked.snap
---
source: src/tests/wildcard.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    cargo vet inspect transitive-third-party1 10.0.0  (used by third-party1)  (100 lines)

estimated audit backlog: 100 lines

Use |cargo vet certify| to record the audits.

